Set max-size on preview-selector to prevent line breaks on long names [stage-1]

--- a/web/scss/sections/displays.scss
+++ b/web/scss/sections/displays.scss
@@ -63,6 +63,14 @@
     }
   }
 
+  .btn-schedule-selector {
+    span {
+      @media (min-width: $screen-md) {
+        max-width: 170px;
+      }
+    }
+  }
+
   .btn-group-checkbox {
     position: relative;
 
